logs/zopyx.ecardsng.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uuid-1.30.egg-info'...
Compiling './lib/python3.5/site-packages/uuid.py'...
***   File "./lib/python3.5/site-packages/uuid.py", line 138
    if not 0 <= time_low < 1<<32L:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zopyx'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/browser'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/content'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/i18n'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/portlets'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/profiles'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/profiles/default'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/profiles/default/types'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/skins'...
Listing './lib/python3.5/site-packages/zopyx/ecardsng/skins/zopyx_ecardsng'...
Compiling './lib/python3.5/site-packages/zopyx/ecardsng/skins/zopyx_ecardsng/ecard_matrix.py'...
***   File "./lib/python3.5/site-packages/zopyx/ecardsng/skins/zopyx_ecardsng/ecard_matrix.py", line 18
    return lst
             ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/zopyx/ecardsng/tests'...
Listing './lib/python3.5/site-packages/zopyx.ecardsng-0.3.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
